[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Edimedia mutoke", email = "kilufyamutoke@gmail.com"},
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-windmill>=1.0.5",
    "mkdocs-gitbook>=0.0.1",
    "sphinx>=7.2.6",
    "furo>=2024.1.29",
    "sphinx-watch>=0.1.2",
    "sphinx-notfound-page>=1.0.0",
    "sphinx-favicon>=1.0.1",
    "sphinx-autobuild>=2024.2.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-book-theme>=1.1.2",
    "myst-parser>=2.0.0",
    "pydata-sphinx-theme>=0.15.2",
    "sphinx-press-theme>=0.8.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
mkdocs-windmill = []
